--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-screens": "~3.20.0",
+    "expo-location": "~15.1.1",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
