--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
@@ -18,15 +19,15 @@
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-camera": "~13.2.1",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-maps": "1.3.2",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "~3.20.0",
-    "expo-location": "~15.1.1",
-    "react-native-maps": "1.3.2"
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
